--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,10 @@
         app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/menu"/>
+        app:menu="@menu/menu"
+        android:background="@color/white"
+        app:elevation="10dp"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
