--- a/app/src/main/res/layout/item_list_fragment.xml
+++ b/app/src/main/res/layout/item_list_fragment.xml
@@ -13,48 +13,33 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/margin"
+    android:layout_margin="10dp"
     tools:context=".ItemListFragment">
+
+    <SearchView
+        android:id="@+id/search"
+        android:layout_width="200dp"
+        android:layout_height="35dp"
+        app:layout_constraintEnd_toStartOf="@id/item_text_done"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@id/item_name"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/item_name"
         style="@style/Widget.Inventory.Header"
         android:layout_marginStart="@dimen/margin_between_elements"
         android:text="@string/task"
-        android:layout_below="@+id/item_name"
-        app:layout_constraintEnd_toStartOf="@+id/item_price"
+
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/item_price"
-        style="@style/Widget.Inventory.Header"
-
-        android:layout_marginStart="1dp"
-        android:text=""
-        android:textAlignment="center"
-        app:layout_constraintEnd_toStartOf="@+id/item_quantity"
-
-        app:layout_constraintStart_toEndOf="@+id/item_name"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/item_quantity"
-        style="@style/Widget.Inventory.Header"
-        android:layout_marginEnd="@dimen/margin_between_elements"
-        android:text=""
-        android:textAlignment="center"
-        app:layout_constraintEnd_toStartOf="@id/item_text_done"
-
-        app:layout_constraintStart_toEndOf="@+id/item_price"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/item_text_done"
@@ -64,8 +49,7 @@
         android:text="Done"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/item_quantity"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/divider"
@@ -74,7 +58,7 @@
         app:layout_constraintBottom_toTopOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_quantity" />
+        app:layout_constraintTop_toBottomOf="@+id/item_name" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
