--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -31,8 +31,12 @@
             android:id="@+id/action_itemListFragment_to_addItemFragment"
             app:destination="@id/addItemFragment" />
         <action
-            android:id="@+id/action_itemListFragment_to_blankFragment"
-            app:destination="@id/blankFragment" />
+            android:id="@+id/action_itemListFragment_self"
+            app:destination="@id/itemListFragment" />
+        <argument
+            android:name="data"
+            app:argType="string"
+            android:defaultValue="Todo" />
     </fragment>
     <fragment
         android:id="@+id/itemDetailFragment"
@@ -63,14 +67,5 @@
             app:destination="@id/itemListFragment"
             app:popUpTo="@id/itemListFragment"
             app:popUpToInclusive="true" />
-    </fragment>
-    <fragment
-        android:id="@+id/blankFragment"
-        android:name="com.example.inventory.ItemListDoneFragment"
-        android:label="Done Tasks"
-        tools:layout="@layout/item_list_done_fragment">
-        <action
-            android:id="@+id/action_blankFragment_to_itemDetailFragment2"
-            app:destination="@id/itemDetailFragment" />
     </fragment>
 </navigation>
