Added card color coding according to date

--- a/app/src/main/res/layout/item_list_item.xml
+++ b/app/src/main/res/layout/item_list_item.xml
@@ -24,6 +24,7 @@
     app:cardMaxElevation="1dp"
     app:cardPreventCornerOverlap="false"
     app:cardUseCompatPadding="true"
+    app:strokeWidth="1dp"
 
 
     >
